inertia-core/src/solvers/snapshots/inertia_core__solvers__min_crawls_board__test__fortress.snap
---
source: src/solvers/min_crawls_board.rs
expression: board
---
[
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 006 005 004 005 006 006 006 007 007 007 007
  007 007 007 006 006 005 004 004 004 005 006 006 007 007 007 007
  007 007 007 006 006 004 004 004 004 004 006 006 007 007 007 007
  007 007 007 006 006 003 002 001 002 003 006 006 007 007 007 007
  007 007 007 006 006 004 002 001 002 004 006 006 007 007 007 007
  007 007 007 006 006 005 001 000 001 005 006 006 007 007 007 007
  007 007 007 006 006 005 002 001 002 005 006 006 007 007 007 007
]
