inertia-core/src/solvers/snapshots/inertia_core__solvers__min_crawls_board__test__gauntlet.snap
---
source: src/solvers/min_crawls_board.rs
expression: board
---
[
  017 016 016 017 017 017 017 017 017 017 017 017 017 017 017 017
  016 016 015 014 014 014 015 016 016 016 016 016 016 016 016 016
  016 015 015 014 013 014 015 016 016 016 016 016 016 016 016 016
  017 014 014 013 012 011 011 011 012 013 014 014 014 014 014 014
  017 014 013 012 012 011 010 011 012 013 014 014 014 014 014 014
  017 014 014 011 011 010 009 008 008 008 009 010 011 011 011 011
  017 015 015 011 010 009 009 008 007 008 009 010 011 011 011 011
  017 016 016 011 011 008 008 007 006 005 005 005 006 007 008 008
  017 016 016 012 012 008 007 006 006 005 004 005 006 007 008 008
  017 016 016 013 013 008 008 005 005 004 003 002 002 003 004 005
  017 016 016 014 014 009 009 005 004 003 003 002 002 003 004 005
  017 016 016 014 014 010 010 005 005 002 002 002 002 002 001 002
  017 016 016 014 014 011 011 006 006 002 002 002 002 002 001 002
  017 016 016 014 014 011 011 007 007 003 003 002 002 002 001 002
  017 016 016 014 014 011 011 008 008 004 004 001 001 001 000 001
  017 016 016 014 014 011 011 008 008 005 005 002 002 002 001 002
]
