inertia-core/src/solvers/snapshots/inertia_core__solvers__min_crawls_board__test__random_classic_gen_21.snap
---
source: src/solvers/min_crawls_board.rs
expression: board
---
[
  002 003 003 003 003 003 003 002 003 003 003 003 003 003 003 003
  002 002 002 002 002 002 002 002 003 003 003 003 003 003 003 003
  003 003 003 003 003 003 003 002 002 003 003 003 003 003 003 003
  003 003 003 003 003 003 003 002 002 003 003 003 003 003 003 003
  003 003 003 003 003 003 003 002 002 003 003 003 003 003 003 003
  003 003 003 003 003 003 003 002 002 003 003 003 003 003 003 003
  003 003 002 003 002 002 002 002 002 002 002 002 003 003 003 003
  003 002 001 000 001 002 003 255 255 003 003 003 003 003 003 003
  002 002 001 000 001 001 002 255 255 003 003 003 003 003 003 003
  002 002 002 000 000 000 003 003 003 003 003 003 003 003 003 003
  003 003 002 002 001 001 002 003 003 003 003 003 003 003 003 003
  003 003 002 002 002 002 002 003 003 003 003 003 003 003 003 003
  003 003 002 003 003 003 002 003 003 003 003 003 003 003 003 003
  003 003 002 003 003 003 002 003 003 003 003 003 003 003 003 003
  003 003 002 003 003 003 002 003 003 003 003 003 003 003 003 003
  003 003 002 003 003 003 002 003 003 003 003 003 003 003 003 003
]
