inertia-core/src/solvers/snapshots/inertia_core__solvers__min_crawls_board__test__shuffle.snap
---
source: src/solvers/min_crawls_board.rs
expression: board
---
[
  255 014 013 012 011 010 009 008 007 008 009 010 011 012 013 255
  014 014 013 012 011 010 009 008 007 008 009 010 011 012 013 014
  013 013 012 011 010 009 008 007 006 007 008 009 010 011 012 013
  012 012 011 010 009 008 007 006 005 006 007 008 009 010 011 012
  011 011 010 009 008 007 006 005 004 005 006 007 008 009 010 011
  010 010 009 008 007 006 005 004 003 004 005 006 007 008 009 010
  009 009 008 007 006 005 004 003 002 003 004 005 006 007 008 009
  008 008 007 006 005 004 003 002 001 002 003 004 005 006 007 008
  007 007 006 005 004 003 002 001 000 001 002 003 004 005 006 007
  008 008 007 006 005 004 003 002 001 002 003 004 005 006 007 008
  009 009 008 007 006 005 004 003 002 003 004 005 006 007 008 009
  010 010 009 008 007 006 005 004 003 004 005 006 007 008 009 010
  011 011 010 009 008 007 006 005 004 005 006 007 008 009 010 011
  012 012 011 010 009 008 007 006 005 006 007 008 009 010 011 012
  013 013 012 011 010 009 008 007 006 007 008 009 010 011 012 013
  255 014 013 012 011 010 009 008 007 008 009 010 011 012 013 255
]
