inertia-core/src/solvers/snapshots/inertia_core__solvers__min_crawls_board__test__shuffle_x.snap
---
source: src/solvers/min_crawls_board.rs
expression: board
---
[
  008 008 008 009 009 008 008 010 013 013 011 012 011 012 011 012
  008 008 008 008 009 008 008 010 013 013 011 012 011 011 011 011
  008 008 008 008 008 008 008 010 013 013 011 012 011 012 011 012
  008 008 008 008 008 008 008 010 013 013 011 011 011 011 011 011
  008 008 008 008 008 008 008 010 012 012 011 012 011 012 012 012
  009 009 009 009 009 008 008 009 011 011 011 011 011 011 011 011
  013 012 011 010 009 008 008 009 010 011 011 012 013 013 013 013
  013 012 011 010 009 008 007 008 009 010 011 012 013 013 013 013
  010 009 008 007 006 005 006 007 008 009 009 010 010 010 010 010
  008 007 006 005 004 005 006 006 007 008 008 008 008 008 008 008
  005 004 003 002 003 004 005 005 008 008 008 008 008 008 008 008
  004 003 002 002 003 003 004 006 009 009 009 008 008 008 009 009
  002 001 002 002 002 002 005 007 010 010 009 008 008 008 008 009
  002 001 002 002 002 003 006 008 011 011 009 008 008 008 008 008
  001 000 001 001 003 004 007 009 012 012 009 008 008 008 008 008
  002 001 002 002 004 005 008 010 013 013 009 008 008 008 008 008
]
